--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,7 @@ jspm_packages/
 
 # Gatsby files
 .cache/
-public
+# public - COMMENTED OUT: We need public folder for Monanimal images and sounds
 
 # Storybook build outputs
 .out
